--- a/LRDraft.tex
+++ b/LRDraft.tex
@@ -161,7 +161,7 @@ we should obtain, self-consistently:
 From the expression of $\Delta \psi$ we can recalculate another approximation for the wavefunction and, correspondingly, for the eigenvalue.
 By definition, the exact solution is reached only when $\ket{g}=0$, which implies that the norm of $\Delta \psi$ must decrease during the perturbative process.
 
-\textbf{Theorem:} Only the eigenstates with negative energy might have a finite-size correction that can be expressed perturbatvely.
+\textbf{Theorem:} Only the eigenstates with negative energy might have a finite-size correction that can be expressed perturbatively.
 
 \textbf{Proof}: 
 If we apply this process to estimate the finite-size correction to a numerical solution of the Schroedinger equation, as the eigenvalue should converge faster than the eigenvector, we conclude that the gradient $g$ becomes nonzero only in regions that  should be located far from the potential region. If this is true, at the next iteration the gradient would become $g + \op H \Delta \psi + \mathcal{O}(\Delta E)$.
